# japan_road_traffic_analysis

./: .gitignore  README.md  app.py  pyproject.toml
gpx_route_status/: get_roads_from_gpx_file.py  get_traffic_status.py  pipeline.py  plot_route.py  postprocessing.py  utils.py
